Bug 415494 - "Wrong rendering of entries (moz_gtk_entry_paint)" [p=frnchfrgg-mozbugs@altern.org (RIVAUD Julien [_FrnchFrgg_]) r=twanno sr=roc a1.9=damons]